Fix text-decoration not getting cleared when set as 'none'.

Turns out the clearing of the decoration was never called.

BUG:466130


(cherry picked from commit 1f28bf0bfb952dfb6996e6708e847925bb163eff)